# RepoPilot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
demo_workspace/sample_project/: README.md
docs/architecture/: ARCHITECTURE.md  PROJECT_SPEC.md
docs/decisions/: CODE_REUSE_LOG.md  MIGRATION_MAP.md
docs/development/: DEVELOPMENT_PLAN.md  LEARNING_PLAN.md
docs/interview/: INTERVIEW_PLAN.md  P0-questions.md  P1-questions.md  P2-questions.md  P3-questions.md  P4-questions.md  P5-questions.md  P6-questions.md
docs/learning/: P0-foundation-and-model.md  P1-tool-calling-loop.md  P2-langgraph-stategraph.md  P3-tool-safety-and-failures.md  P4-patch-and-human-approval.md  P5-test-feedback-and-repair-loop.md  P6-persistence-context-and-trace.md
docs/security/: TOOL_SAFETY_POLICY.md
scripts/: demo_p1.py  demo_p2.py  demo_p3.py  demo_p4.py  demo_p5.py  demo_p6.py
tests/: __init__.py  fake_runner.py  scripted_model.py  service_factory.py
tests/integration/: test_agent_api.py  test_health_api.py  test_langgraph_agent_api.py  test_patch_approval_api.py  test_patch_approval_graph.py  test_real_pytest_runner.py  test_repair_loop_api.py  test_repair_loop_graph.py  test_run_management_api.py  test_sqlite_restart_resume.py
tests/unit/: test_agent_graph.py  test_agent_nodes.py  test_agent_routing.py  test_agent_state.py  test_approval_contracts.py  test_approval_nodes.py  test_config.py  test_context_manager.py  test_final_report.py  test_model_factory.py  test_patch_applicator.py  test_patch_proposal.py  test_patch_tool.py  test_persistence_lifecycle.py  (+12 more)
(+54 files in other folders)
