[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot"
version = "0.0.0"
description = "Code analysis and repair agent under development"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.0,<0.140.0",
    "langchain-core>=1.4.9,<2.0.0",
    "langchain-openai>=1.3.5,<2.0.0",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "uvicorn>=0.51.0,<0.52.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=9.1.1,<10.0.0",
    "ruff>=0.15.21,<0.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["reference_materials"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
